--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,10 @@
 		<title>LibrEyLmao</title>
 	</head>
 	<body>
-		Before
+		Traczolini
 		<br />
 		<%- body %>
 		<br />
-		After
+		Minipenisoli
 	</body>
 </html>
