--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -7,9 +7,9 @@
     <select name="author">
     <% authors.forEach(author => { %>
       <% if (author.id === book.author) { %>
-        <option selected label="<%= author.name %>" value="<%= author.id %>">
+        <option selected label="<%= author.name %>" value="<%= author.id %>"> <%= author.name %> </option>
       <% } else { %>
-        <option label="<%= author.name %>" value="<%= author.id %>">
+        <option label="<%= author.name %>" value="<%= author.id %>"> <%= author.name %> </option>
       <% } %>
     <% }) %>
     </select>
